# sspy

./: .mtn-ignore  Makefile.am  RScell_Vm  autogen.sh  clean.py  configure.ac  dev_notes.txt  doxygen.cfg  egg_build.py  notes.txt  release-expand.config  setup.py  sspy  sspy.py  tests.config  uninstall.py
docs/: INFO.txt
genesis3/sspy/: __cbi__.py  __init__.py  errors.py  launcher.py  plugin.py  registry.py  save.py  schedulee.py
genesis3/sspy/plugins/inputs/perfectclamp/: input.py  input.yml
genesis3/sspy/plugins/inputs/pulsegen/: input.py  input.yml
genesis3/sspy/plugins/outputs/line/: output.py
genesis3/sspy/plugins/outputs/live_output/: output.py  output.yml
genesis3/sspy/plugins/outputs/output/: output.py
genesis3/sspy/plugins/outputs/script_out/: script_output.py
genesis3/sspy/plugins/services/heccer_intermediary/: heccer_intermediary.py
genesis3/sspy/plugins/services/nmc/: model_container.py  service.yml
genesis3/sspy/plugins/solvers/chemesis3/: chemesis3.py  solver.yml
genesis3/sspy/plugins/solvers/heccer/: heccer.py
genesis3/sspy/shell/: __init__.py  interface.py
sspy/: __cbi__.py  __init__.py  _solver_collection.py  analyzer.py  errors.py  input.py  launcher.py  plugin.py  registry.py  save.py  schedulee.py  sim.py
sspy/plugins/event_distributors/des/: des.py  event_distributor.yml
sspy/plugins/inputs/perfectclamp/: input.py  input.yml
sspy/plugins/inputs/pulsegen/: input.py  input.yml  pulsegen.py
sspy/plugins/outputs/line/: output.py
sspy/plugins/outputs/live_output/: output.py
sspy/plugins/outputs/output/: output.py  output.yml
sspy/plugins/outputs/script_out/: script_output.py
sspy/plugins/outputs/stdout/: output.py  output.yml
sspy/plugins/services/heccer_intermediary/: heccer_intermediary.py  service.yml
sspy/plugins/services/model_container/: service.py  service.yml
sspy/plugins/services/nmc/: model_container.py  service.py  service.yml
sspy/plugins/solvers/chemesis3/: solver.py
sspy/plugins/solvers/des/: solver.py  solver.yml
sspy/plugins/solvers/heccer/: heccer.py  solver.py  solver.yml
sspy/shell/: __init__.py
sspy/solvers/heccer/: heccer.py
sspy/templates/: input.py  output.py  solver.py
tests/: tests.config
tests/python/: RScell_model2.py  add_service_plugins.py  add_solver_plugins.py  addressing-aggregator1.py  cal1_api.py  cal1_myapi.py  cal2_myapi.py  dump.py  edjb1994-endogenous.py  edsjb1994-endogenous.py  edsjb1994-perfectclamp-filename.py  edsjb1994-perfectclamp.py  edsjb1994-perfectclamp_api.py  edsjb1994-silent.py  element_list.py  heccer_address_test.py  load.py  network-1x4-loops.py  network-1x4.py  network_simple_api.py  output1.py  output2.py  output3.py  output4.py  output_2_solverinfo_1.py  output_api_1.py  output_api_header.py  output_api_notimestep_1.py  output_live_api_1.py  output_live_api_2.py  output_live_column_api_1.py  output_live_column_api_2.py  parameter_operation_1.py  parameter_operation_2.py  perfectclamp1_api.py  pool1_contributors2.py  pool1_feedback1.py  progress_1.py  progress_2.py  pulsegen_extgate_api.py  (+44 more)
tests/python/test_services/test/: service.yml  test.py
tests/python/test_services/test_2/: service.yml  test.py
tests/python/test_solvers/test/: solver.yml  test.py
tests/python/test_solvers/test_2/: solver.yml  test.py
tests/specifications/: chemesis.t  heccer_addressing.t  output.t  parameteroperations.t  passive.t  perfectclamp.t  plugins.t  pools.t  progress.t  pulsegen.t  purk_test.t  purk_test_segment.t  purk_test_shell.t  purk_test_shell_deprecated.t  purk_test_soma.t  purk_test_soma_aggregators.t  reset.t  service_registry.t  services.t  shell.t  solver_registry.t  solvers.t  synaptic.t  version.t
tests/specifications/strings/: cal1.txt  cal1_buf.txt  cal1_cal.txt  cal2_buf.txt  cal2_cal.txt  edsjb1994-perfectclamp.txt  output1.txt  output2.txt  output4.txt  output_header_1.txt  output_live_api_1.txt  output_live_api_2.txt  perfectclamp1.txt  pool1_contributors2.txt  pool1_feedback1.txt  pulsegen_freerun.txt  purk_test.txt  purk_test_api_live_output.txt  purk_test_segment.txt  purk_test_soma.txt  purk_test_soma_aggregators.txt  reset1.txt  reset2.txt  reset3.txt  reset4.txt  singlea-naf.txt  singlep.txt  springmass3.txt  springmass4.txt
tests/yaml/: c1c2p1.yml  c1c2p2.yml  doublep.yml  fork3p.yml  fork4p1.yml  fork4p2.yml  fork4p3.yml  output_1.yml  pool1-feedback2.yml  pool1.yml  purk_test_soma.yml  service_1.yml  service_2.yml  singlea-naf.yml  singlea-naf2-aggregator.yml  solver_1.yml  solvers.yml  spiker1.yml  spiker3.yml  spiker4.yml  tensizesp.yml  triplep.yml
yaml/: addressing_aggregator1.yml  cal1.yml  channel1_nernst1.yml  channel2_nernst2.yml  output1.yml  output2.yml  output3.yml  output4.yml  pool1_contributors2.yml  pool1_feedback1.yml  pulsegen_freerun.yml  purk_test.yml  purk_test_segment.yml  purk_test_soma.yml  purk_test_soma_0.yml  purk_test_soma_2e-9.yml  purk_test_soma_aggregators.yml  springmass3.yml  springmass4.yml  volumeconnect.yml
yaml/heccer/: pool1_feedback1.yml  pulsegen_extgate.yml  pulsegen_exttrig.yml  pulsegen_freerun.yml  singlep.yml
yaml/purkinje/: edsjb1994-current.yml  edsjb1994-endogenous-aggregators.yml  edsjb1994-endogenous.yml  edsjb1994-perfectclamp-filename.yml  edsjb1994-perfectclamp.yml  edsjb1994-silent.yml
